# lab3_sahil_verma

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
app/: main.py
app/data/: model.json  model_metadata.json
