[project]
name = "lab3-sahil-verma"
version = "0.1.0"
description = "Penguin Species Classification Machine Learning Project"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

dependencies = [
    # Data manipulation and scientific computing
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "scipy>=1.15.3",

    # Machine Learning
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.2",

    # Data Visualization
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",

    # Web Framework
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",

    # Type Handling
    "pydantic>=2.11.7",
    "typing-extensions>=4.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "mypy>=1.3.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
]

docs = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
